--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900&display=swap');
 
+/* GLOBAL */
+
 body {
     background: #e5e5e5;
     color: #25282b;
@@ -9,6 +11,10 @@ body {
     margin: 0;
     border: 0;
     padding: 0;
+}
+
+body.hideScroll {
+    overflow: hidden;
 }
 
 #modal.hide {
@@ -32,6 +38,33 @@ p, .description {
     letter-spacing: 0.1px;
 }
 
+.button {
+    color: white;
+    background: #ff5e84;
+
+    width: 150px;
+    height: 40px;
+
+    border-radius: 8px;
+    letter-spacing: 1.5px;
+
+    font-size: 14px;
+    font-weight: bold;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
+}
+
+.button:hover {
+    background-color: #0984e3;
+    text-decoration: none;
+}
+
+/* PADRÃO */
+
 #container {
     width: 90%;
     max-width: 980px;
@@ -44,7 +77,7 @@ p, .description {
 #intro {
     width: 300px;
 
-    margin-right: 20px;
+    margin-right: 64px;
 }
 
 main {
@@ -76,22 +109,6 @@ button {
 
 button:hover {
     text-decoration: underline;
-}
-
-button.fat {
-    color: white;
-    background: #ff5e84;
-
-    width: 150px;
-    height: 40px;
-
-    border-radius: 6px;
-
-    box-shadow: 0px 8px 16px rgba(255, 0, 92, 0.16);
-}
-
-button.fat {
-    text-decoration: none;
 }
 
 footer {
@@ -148,16 +165,23 @@ footer a {
 
     position: absolute;
     top: 0;
-
-    width: 100vw;
-    height: 140vh;
+    bottom: 0;
+    right: 0;
+    left: 0;
+   
 
     display: flex;
     justify-content: center;
+
+    transition: 400ms;
 }
 
+#modal.addScroll {
+    overflow: auto;
+} 
+
 #modal .content {
-    margin-top: 128px;
+    margin-top: 5%;
 
     color: #fff;
 }
@@ -172,7 +196,7 @@ footer a {
     width: 80%;
     max-width: 800px;
 
-    margin: 0 auto;
+    margin: 0 auto 15%;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -258,4 +282,72 @@ form button:hover {
     color: #fff;
 
     text-decoration: none;
+}
+
+/* IDEIA.HTML */
+
+#page-ideas #container {
+    display: block;
+}
+
+#page-ideas header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#page-ideas nav {
+    display: flex;
+    align-items: center;
+}
+
+#page-ideas nav li {
+    list-style-type: none;
+
+    margin-right: 16px;
+}
+
+#page-ideas nav li a {
+    color: #25282b;
+}
+
+#page-ideas nav li a.button {
+    color: white;
+}
+
+#page-ideas nav li:last-child {
+    margin: 0;
+}
+
+
+
+section#title {
+    text-align: center;
+}
+
+section#title p {
+    opacity: 0.7;
+    margin: 0;
+}
+
+section#title h1 {
+    margin: 0;
+
+    font-size: 28px;
+}
+
+section#ideas {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 20px;
+}
+
+section#ideas .idea {
+    margin: 0;
+}
+
+section#title,
+section#ideas,
+footer {
+    margin-top: 64px;
 }
