--- a/public/style.css
+++ b/public/style.css
@@ -163,7 +163,7 @@ footer a {
 #modal {
     background: #ff5e84;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
@@ -351,3 +351,4 @@ section#ideas,
 footer {
     margin-top: 64px;
 }
+
